vendor/sqlx-0.5.2/tests/ui/mysql/gated/chrono.stderr
error: optional feature `chrono` required for type DATE of column #1 ("date")
 --> $DIR/chrono.rs:2:13
  |
2 |     let _ = sqlx::query!("select CONVERT(now(), DATE) date");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: optional feature `chrono` required for type TIME of column #1 ("time")
 --> $DIR/chrono.rs:4:13
  |
4 |     let _ = sqlx::query!("select CONVERT(now(), TIME) time");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: optional feature `chrono` required for type DATETIME of column #1 ("datetime")
 --> $DIR/chrono.rs:6:13
  |
6 |     let _ = sqlx::query!("select CONVERT(now(), DATETIME) datetime");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
